Refactor whale transfers
