# api/getWhales.go
@@ -3,8 +3,12 @@ package api
 import (
 	"github.com/everstake/teztracker/api/render"
 	"github.com/everstake/teztracker/gen/restapi/operations/accounts"
+	"github.com/everstake/teztracker/gen/restapi/operations/operations_list"
+	"github.com/everstake/teztracker/repos"
+	"github.com/everstake/teztracker/services"
 	"github.com/everstake/teztracker/services/whales"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/sirupsen/logrus"
 )
 
 type getWhaleAccountsHandler struct{}
@@ -18,13 +22,29 @@ func (h *getWhaleAccountsHandler) Handle(params accounts.GetWhaleAccountsParams)
 	return accounts.NewGetWhaleAccountsOK().WithPayload(render.WhaleAccounts(data))
 }
 
-type getWhaleTransfersHandler struct{}
+type getWhaleTransfersHandler struct {
+	provider DbProvider
+}
 
-func (h *getWhaleTransfersHandler) Handle(params accounts.GetWhaleTranfersParams) middleware.Responder {
+func (h *getWhaleTransfersHandler) Handle(params operations_list.GetWhaleTranfersParams) middleware.Responder {
 	net, err := ToNetwork(params.Network)
 	if err != nil {
-		return accounts.NewGetWhaleTranfersBadRequest()
+		return operations_list.NewGetWhaleTranfersBadRequest()
 	}
-	data := whales.Service.GetData(net)
-	return accounts.NewGetWhaleTranfersOK().WithPayload(render.WhaleTransfers(data))
+
+	db, err := h.provider.GetDb(net)
+	if err != nil {
+		return operations_list.NewGetWhaleTranfersBadRequest()
+	}
+	service := services.New(repos.New(db), net)
+
+	limiter := NewLimiter(params.Limit, params.Offset)
+
+	ops, err := service.GetWhaleTransfers(limiter, *params.Period)
+	if err != nil {
+		logrus.Errorf("failed to get whale transfers: %s", err.Error())
+		return operations_list.NewGetWhaleTranfersInternalServerError()
+	}
+
+	return operations_list.NewGetWhaleTranfersOK().WithPayload(render.Operations(ops))
 }
