# gen/models/large_transfer.go
@@ -1,49 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/swag"
-)
-
-// LargeTransfer large transfer
-// swagger:model LargeTransfer
-type LargeTransfer struct {
-
-	// amount
-	Amount int64 `json:"amount,omitempty"`
-
-	// from
-	From string `json:"from,omitempty"`
-
-	// to
-	To string `json:"to,omitempty"`
-}
-
-// Validate validates this large transfer
-func (m *LargeTransfer) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *LargeTransfer) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *LargeTransfer) UnmarshalBinary(b []byte) error {
-	var res LargeTransfer
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
