# gen/restapi/operations/operations_list/get_whale_tranfers_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package accounts
+package operations_list
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -25,7 +25,7 @@ type GetWhaleTranfersOK struct {
 	/*
 	  In: Body
 	*/
-	Payload []*models.LargeTransfer `json:"body,omitempty"`
+	Payload []*models.OperationsRow `json:"body,omitempty"`
 }
 
 // NewGetWhaleTranfersOK creates GetWhaleTranfersOK with default headers values
@@ -35,13 +35,13 @@ func NewGetWhaleTranfersOK() *GetWhaleTranfersOK {
 }
 
 // WithPayload adds the payload to the get whale tranfers o k response
-func (o *GetWhaleTranfersOK) WithPayload(payload []*models.LargeTransfer) *GetWhaleTranfersOK {
+func (o *GetWhaleTranfersOK) WithPayload(payload []*models.OperationsRow) *GetWhaleTranfersOK {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get whale tranfers o k response
-func (o *GetWhaleTranfersOK) SetPayload(payload []*models.LargeTransfer) {
+func (o *GetWhaleTranfersOK) SetPayload(payload []*models.OperationsRow) {
 	o.Payload = payload
 }
 
@@ -52,7 +52,7 @@ func (o *GetWhaleTranfersOK) WriteResponse(rw http.ResponseWriter, producer runt
 	payload := o.Payload
 	if payload == nil {
 		// return empty array
-		payload = make([]*models.LargeTransfer, 0, 50)
+		payload = make([]*models.OperationsRow, 0, 50)
 	}
 
 	if err := producer.Produce(rw, payload); err != nil {
@@ -106,4 +106,28 @@ func (o *GetWhaleTranfersNotFound) WriteResponse(rw http.ResponseWriter, produce
 	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
 
 	rw.WriteHeader(404)
+}
+
+// GetWhaleTranfersInternalServerErrorCode is the HTTP code returned for type GetWhaleTranfersInternalServerError
+const GetWhaleTranfersInternalServerErrorCode int = 500
+
+/*GetWhaleTranfersInternalServerError Internal error
+
+swagger:response getWhaleTranfersInternalServerError
+*/
+type GetWhaleTranfersInternalServerError struct {
+}
+
+// NewGetWhaleTranfersInternalServerError creates GetWhaleTranfersInternalServerError with default headers values
+func NewGetWhaleTranfersInternalServerError() *GetWhaleTranfersInternalServerError {
+
+	return &GetWhaleTranfersInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *GetWhaleTranfersInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
 }
