# swagger/swagger.yml
@@ -1531,19 +1531,38 @@ paths:
           description: Not used
           required: true
           type: string
+        - in: query
+          name: limit
+          type: integer
+          default: 20
+          minimum: 1
+          maximum: 500
+        - in: query
+          name: offset
+          description: Offset
+          type: integer
+          default: 0
+          minimum: 0
+        - in: query
+          name: period
+          type: string
+          enum: [C, D, W, M]
+          default: D
       responses:
         '200':
           description: List of large transfers
           schema:
             items:
-              $ref: '#/definitions/LargeTransfer'
+              $ref: '#/definitions/OperationsRow'
             type: array
         '400':
           description: Bad request
         '404':
           description: Not Found
+        '500':
+          description: Internal error
       tags:
-        - Accounts
+        - OperationsList
   '/v2/data/{platform}/{network}/blocks':
     get:
       operationId: getBlocksList
@@ -4163,12 +4182,3 @@ definitions:
             amount:
               type: integer
               format: int64
-  LargeTransfer:
-    properties:
-      from:
-        type: string
-      to:
-        type: string
-      amount:
-        type: integer
-        format: int64
